# flamyngo

./: .gitignore  .pre-commit-config.yaml  CHANGES.md  CHANGES.rst  LICENSE  MANIFEST.in  README.md  index.html  params.json  pyproject.toml  requirements.txt  run.py  setup.cfg  setup.py  tasks.py
.github/: ISSUE_TEMPLATE.md  dependabot.yml
.github/workflows/: lint.yml
flamyngo/: __init__.py  app.py  flm.py  views.py
flamyngo/static/: index.css  plot.css  style.css
flamyngo/templates/: doc.html  icsd_details.html  icsd_results.html  index.html  layout.html  plot.html  results.html
scripts/: flm
src/flamyngo/: __init__.py  app.py  flm.py  views.py
src/flamyngo/static/: index.css
